--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,6 +57,9 @@ flutter:
     - assets\background.png
     - assets\transportable_logo.png
     - assets\map_screen.png
+    - assets\tricycle_icon.png
+    - assets\jeep_icon.png
+    - assets\bus_icon.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
